<resources>
    <string name="app_name">DocReader-Advanced</string>
    <string name="help">Help</string>
    <string name="regula_document_reader">Regula Document Reader</string>
    <string name="settings">Settings</string>
    <string name="select_scenario">Select Scenario</string>
    <string name="information">Information</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="minus">—</string>
    <string name="plus">+</string>
    <string name="back">Back</string>
    <string name="application">Application</string>
    <string name="api">API</string>
    <string name="reset">Reset</string>
    <string name="check">✔</string>
    <string name="string_default">default</string>
    <string name="stepper_value">%1$d %2$s</string>
    <string name="skip_rfid_button">Skip rfid button</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_activity_direct_results">DirectActivity</string>
    <string name="direct">Direct</string>
    <string name="overall_result">OVERALL_RESULT: </string>
    <string name="success_fail">success/fail</string>
    <string name="results">Results</string>
    <string name="compare">Compare</string>
    <string name="value">value</string>
    <string name="comparison_value">comparison value</string>
    <string name="rfid">RFID</string>
    <string name="auth">Auth</string>
    <string name="ic_menu_info_details">ic_menu_info_details</string>
    <string name="help_image">help image</string>
    <string name="mrz">MRZ</string>
    <string name="help_mrz">The Machine Readable Zone (MRZ) provides a set of essential data elements in a format, standardized for each type of a Machine Readable Travel Document (MRTD), that can be used by all receiving States regardless of their national script or customs. The data in the MRZ are formatted in such a way as to be readable by machines with standard capability worldwide.</string>
    <string name="viz">VIZ</string>
    <string name="help_viz">The Visual Inspection Zone (VIZ) of a Machine Readable Travel Document (MRTD) comprises the mandatory and optional data elements designed for visual inspection.</string>
    <string name="barcode">Barcode</string>
    <string name="help_barcode">Barcode is a means of storing data as a pattern of lines or dots.</string>
    <string name="add_parameter">Add parameter</string>
    <string name="result">Result:</string>
    <string name="code_definition">Code definition:</string>
    <string name="all_results">All Results</string>
    <string name="pageIndex">Page: %1$d</string>
    <string name="strResetAllSettings">Reset all settings</string>
    <string name="strResetAllAppSettingsConfirmation">This will reset all settings of the application</string>
    <string name="strResetAllAPISettingsConfirmation">This will reset all API settings</string>
    <string name="strCancel">Cancel</string>
    <string name="strSendRequest">Send Request</string>
    <string name="strSelectImage">Select image</string>
    <string-array name="select_image">
        <item>Gallery</item>
        <item>Camera Shot</item>
    </string-array>
</resources>