<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="?colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/regula_document_reader"
            android:textColor="?colorOnSecondary"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/directBtn"
            app:layout_constraintStart_toEndOf="@+id/backBtn" />

        <Button
            android:id="@+id/directBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/direct"
            android:textAllCaps="false"
            android:textColor="?colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_overallResults"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TextView
            android:id="@+id/overAllResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_gap"
            android:paddingTop="15dp"
            android:paddingEnd="@dimen/padding_gap"
            android:paddingBottom="15dp"
            android:text="@string/overall_result"
            android:textAlignment="center"
            android:textColor="?colorOnSecondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/overAllResultImage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/success_fail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/overAllResult"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/confirm_red"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="@dimen/padding_gap"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="@dimen/padding_gap"
        android:background="@drawable/rounded"
        app:layout_constraintTop_toBottomOf="@id/cl_overallResults"
        app:tabIndicator="@drawable/tab_indicator"
        app:tabIndicatorColor="?colorOnPrimary"
        app:tabIndicatorGravity="stretch"
        app:tabRippleColor="@android:color/transparent"
        app:tabTextAppearance="@style/TabTextAppearance"
        app:tabTextColor="?colorOnSecondary">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/results" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compare" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rfid" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth" />
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/results_compare_rfid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/padding_gap"
        android:layout_marginBottom="@dimen/padding_gap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>